Fix media query width issue causing clipping between mobile/tablet displays

--- a/style.css
+++ b/style.css
@@ -254,19 +254,20 @@ nav img,
 
     main {
         display: grid;
-        grid-template: auto auto / auto;
+        grid-template: auto 1fr / auto;
         gap: var(--item-padding);
         
         background-color: #F6F6F6;
-        padding: var(--item-padding);
+        /* padding: var(--item-padding); */
         border-radius: var(--ui-rad);
     }
 
         .primary-title {
-            margin: calc(-1 * var(--item-padding)) calc(-1 * var(--item-padding)) 0rem;
-            padding: calc(0.75 * var(--item-padding)) calc(1.5 * var(--item-padding));
+            display: flex;
+            align-items: center;
+
+            padding: var(--item-padding);
             border-radius: var(--ui-rad) var(--ui-rad) 0px 0px;
-            height: var(--header-height);
 
             background-color: #E5C441;
             font-size: var(--element-header-font-size);
@@ -274,11 +275,19 @@ nav img,
             font-weight: bolder;
         }
 
+            .primary-title .title-container {
+                display: flex;
+                align-items: center;
+                min-height: var(--nav-h2-icn-height);
+            }
+
         .proj-cards {
             display: grid;
             grid-auto-rows: auto;
             grid-template-columns: repeat(auto-fit, minmax(19rem, 1fr));
             gap: 1rem;
+
+            padding: 0px var(--item-padding);
         }
 
             .card {
@@ -459,7 +468,7 @@ nav img,
 /* -------------- */
 
 /* MOBILE -------------------- */
-@media only screen and (max-width: 574px) {
+@media only screen and (max-width: 653px) {
     /* GRID LAYOUT -------------------- */
     .container {
         display: grid;
@@ -474,7 +483,7 @@ nav img,
 }
 
 /* TABLET -------------------- */
-@media only screen and (min-width: 575px) and (max-width: 1100px) {
+@media only screen and (min-width: 654px) and (max-width: 1100px) {
     /* GRID LAYOUT -------------------- */
     :root {
         --header1-height: 2fr;
